--- a/src/app/show-character/character-spell-book/spell-dialog/spell-dialog.component.html
+++ b/src/app/show-character/character-spell-book/spell-dialog/spell-dialog.component.html
@@ -16,7 +16,9 @@
     <textarea matInput [(ngModel)]="spell.description" type="number"></textarea>
   </mat-form-field>
   <mat-dialog-actions align="end">
-    <button mat-button *ngIf="this.spellbook" [mat-dialog-close]="">Cancel</button>
+    @if (this.spellbook) {
+      <button mat-button [mat-dialog-close]="">Cancel</button>
+    }
     <button color="primary" mat-raised-button (click)="upsertSpell()" [mat-dialog-close]="" cdkFocusInitial>Done</button>
   </mat-dialog-actions>
 </mat-dialog-content>
