--- a/src/app/show-character/item-list/item-dialog/item-dialog.component.html
+++ b/src/app/show-character/item-list/item-dialog/item-dialog.component.html
@@ -1,13 +1,15 @@
 <h2 mat-dialog-title>{{item.inventoryString()}}</h2>
 <mat-dialog-content class="mat-typography">
   <mat-form-field>
-    <mat-label>Template</mat-label>
+    <mat-label>Search equipment list</mat-label>
     <input matInput [(ngModel)]="templateFilter" (ngModelChange)="filterTemplates()"
-           [matAutocomplete]="templateAuto">
+      [matAutocomplete]="templateAuto">
     <mat-autocomplete #templateAuto="matAutocomplete" (optionSelected)="onTemplateSelect($event)">
-      <mat-option *ngFor="let e of filteredEquipment" [value]="e.name">
-        {{e.name}} ({{formatGp(e.price)}}, {{e.weight}}cn)
-      </mat-option>
+      @for (e of filteredEquipment; track e) {
+        <mat-option [value]="e.name">
+          {{e.name}} ({{formatGp(e.price)}}, {{e.weight}}cn)
+        </mat-option>
+      }
     </mat-autocomplete>
   </mat-form-field>
   <br/>
@@ -31,7 +33,9 @@
     <textarea matInput [(ngModel)]="item.description"></textarea>
   </mat-form-field>
   <mat-dialog-actions align="end">
-    <button mat-button *ngIf="this.list" [mat-dialog-close]="">Cancel</button>
+    @if (this.list) {
+      <button mat-button [mat-dialog-close]="">Cancel</button>
+    }
     <button color="primary" mat-raised-button (click)="upsertItem()" [mat-dialog-close]="" cdkFocusInitial>Done</button>
   </mat-dialog-actions>
 </mat-dialog-content>
